addons/traefik/traefik-ingressroute/traefik-redis/traefik.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress
    spec:
      serviceAccountName: traefik-ingress-controller
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: ingress
                operator: In
                values:
                - "true"
      tolerations:
      - key: ingress
        value: "true"
        effect: NoSchedule
      containers:
        - name: traefik-ingress
          image: traefik:v2.2
          args:
            - --log.level=WARN
            - --api
            - --api.insecure=true
            - --api.dashboard=true
            - --ping=true
            - --metrics.prometheus=true
            - --accesslog=true
            - --providers.kubernetescrd
            - --entrypoints.http.address=:80
            - --entrypoints.https.address=:443
            - --entrypoints.redis.address=:6379
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: admin
              containerPort: 8080
            - name: redis
              containerPort: 6379
