addons/traefik/traefik-ingressroute/traefik-redis/traefik-ingressroute-tcp-redis-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingressroute-tcp-redis
  namespace: kube-system
spec:
  type: NodePort
  selector:
    k8s-app: traefik-ingress
  ports:
    - protocol: TCP
      port: 6379
      name: traefik-ingressroute-tcp-redis
      targetPort: 6379
      nodePort: 36379
