addons/traefik/traefik-ingressroute/traefik-redis/redis-ingressroute-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis-standalone
  namespace: default
spec:
  entryPoints:
    - redis
  routes:
  - match: HostSNI(`*`)
    services:
      - name: redis-standalone
        namespace: default
        port: 6379
